[gd_scene load_steps=12 format=3 uid="uid://h4v5kl8bi2gh"]

[ext_resource type="Script" path="res://program/intro.gd" id="1_23u7w"]
[ext_resource type="PackedScene" uid="uid://ckq3qntjrhh3d" path="res://program/ui/info_menu.tscn" id="2_dfi50"]
[ext_resource type="PackedScene" uid="uid://h81bd8xrr2u4" path="res://program/main.tscn" id="2_vun1w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gn6if"]
bg_color = Color(0.137255, 0.137255, 0.137255, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_drne8"]
bg_color = Color(0.179688, 0.179688, 0.179688, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rbab4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e4pkn"]
bg_color = Color(0.137255, 0.137255, 0.137255, 1)
corner_radius_top_left = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bvksk"]
bg_color = Color(0.179688, 0.179688, 0.179688, 1)
corner_radius_top_right = 5
corner_radius_bottom_right = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_423sf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sku1e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d6t5n"]

[node name="Intro" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6
script = ExtResource("1_23u7w")
editor_scene = ExtResource("2_vun1w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 2

[node name="MenuContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="InfoMenuButton" parent="VBoxContainer/MenuContainer" node_paths=PackedStringArray("license_popup", "reset_info") instance=ExtResource("2_dfi50")]
layout_mode = 2
license_popup = NodePath("LicensePopup")
reset_info = NodePath("AcceptDialog")

[node name="Label" type="Label" parent="VBoxContainer/MenuContainer"]
layout_mode = 2
text = "Will merge all translated lines from the source into the target while keeping the structure of the target intact"
vertical_alignment = 2

[node name="SourceFileContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SourceFileContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/SourceFileContainer/HBoxContainer"]
custom_minimum_size = Vector2(61, 35)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_gn6if")
text = "Source"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SourcePathTextEdit" type="TextEdit" parent="VBoxContainer/SourceFileContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(740, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_drne8")
theme_override_styles/focus = SubResource("StyleBoxEmpty_rbab4")
scroll_fit_content_height = true

[node name="SourceOpenButton" type="Button" parent="VBoxContainer/SourceFileContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 2.08165e-12)
layout_mode = 2
text = "Open"

[node name="SourceFileDialog" type="FileDialog" parent="VBoxContainer/SourceFileContainer/SourceOpenButton"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(800, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.txt")

[node name="SourceInfoLabel" type="Label" parent="VBoxContainer/SourceFileContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Old intl.txt (your current translation) or exported new lines"

[node name="TargetFileContainer" type="GridContainer" parent="VBoxContainer"]
layout_mode = 2
columns = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/TargetFileContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="VBoxContainer/TargetFileContainer/HBoxContainer"]
custom_minimum_size = Vector2(61, 35)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_e4pkn")
text = "Target"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TargetPathTextEdit" type="TextEdit" parent="VBoxContainer/TargetFileContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(740, 35)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_bvksk")
theme_override_styles/focus = SubResource("StyleBoxEmpty_423sf")
scroll_fit_content_height = true

[node name="TargetOpenButton" type="Button" parent="VBoxContainer/TargetFileContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(66, 2.08165e-12)
layout_mode = 2
text = "Open"

[node name="TargetFileDialog" type="FileDialog" parent="VBoxContainer/TargetFileContainer/TargetOpenButton"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(800, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.txt")

[node name="TargetInfoLabel" type="Label" parent="VBoxContainer/TargetFileContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "New intl.txt (untranslated) or your already merged file if you want to import new lines"

[node name="Spacer" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BottomContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 40

[node name="OptionsContainer" type="VBoxContainer" parent="VBoxContainer/BottomContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0

[node name="MarkNewCheckBox" type="CheckBox" parent="VBoxContainer/BottomContainer/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "If enabled, new lines will replace the second line with NewLine"
theme_override_styles/focus = SubResource("StyleBoxEmpty_sku1e")
text = "Mark new lines with:"

[node name="MarkNewTextEdit" type="TextEdit" parent="VBoxContainer/BottomContainer/OptionsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
tooltip_text = "{line} -> line number
{section} -> section name"
theme_override_styles/focus = SubResource("StyleBoxEmpty_d6t5n")
text = "ToDo: {line}"
editable = false
selecting_enabled = false

[node name="MarkInfoLabel" type="Label" parent="VBoxContainer/BottomContainer/OptionsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="OptionsContainer2" type="VBoxContainer" parent="VBoxContainer/BottomContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 0

[node name="MapNameSectionCheckBox" type="Label" parent="VBoxContainer/BottomContainer/OptionsContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 31)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "The name of the section that holds the map names
(Normally [21], [20] in older versions)"
mouse_filter = 0
text = "Map Name Section:"
vertical_alignment = 1

[node name="MapNameOptionButton" type="OptionButton" parent="VBoxContainer/BottomContainer/OptionsContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
tooltip_text = "The name of the section that holds the map names
(Normally [21], [20] in older versions)"

[node name="MapNameSectionInfoLabel" type="Label" parent="VBoxContainer/BottomContainer/OptionsContainer2"]
layout_mode = 2

[node name="Spacer" type="Control" parent="VBoxContainer/BottomContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="MergeButton" type="Button" parent="VBoxContainer/BottomContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 66)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 32
disabled = true
text = "Merge"

[connection signal="gui_input" from="VBoxContainer/SourceFileContainer/HBoxContainer/SourcePathTextEdit" to="." method="_on_source_path_text_edit_gui_input"]
[connection signal="text_changed" from="VBoxContainer/SourceFileContainer/HBoxContainer/SourcePathTextEdit" to="." method="_on_source_path_text_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/SourceFileContainer/SourceOpenButton" to="." method="_on_source_open_button_pressed"]
[connection signal="file_selected" from="VBoxContainer/SourceFileContainer/SourceOpenButton/SourceFileDialog" to="." method="_on_source_file_dialog_file_selected"]
[connection signal="gui_input" from="VBoxContainer/TargetFileContainer/HBoxContainer/TargetPathTextEdit" to="." method="_on_target_path_text_edit_gui_input"]
[connection signal="text_changed" from="VBoxContainer/TargetFileContainer/HBoxContainer/TargetPathTextEdit" to="." method="_on_target_path_text_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/TargetFileContainer/TargetOpenButton" to="." method="_on_target_open_button_pressed"]
[connection signal="file_selected" from="VBoxContainer/TargetFileContainer/TargetOpenButton/TargetFileDialog" to="." method="_on_target_file_dialog_file_selected"]
[connection signal="toggled" from="VBoxContainer/BottomContainer/OptionsContainer/MarkNewCheckBox" to="." method="_on_mark_new_check_box_toggled"]
[connection signal="text_changed" from="VBoxContainer/BottomContainer/OptionsContainer/MarkNewTextEdit" to="." method="_on_mark_new_text_edit_text_changed"]
[connection signal="item_selected" from="VBoxContainer/BottomContainer/OptionsContainer2/MapNameOptionButton" to="." method="_on_map_name_option_button_item_selected"]
[connection signal="pressed" from="VBoxContainer/BottomContainer/MergeButton" to="." method="_on_merge_button_pressed"]
